--- a/estatjapan/android/app/src/main/res/values/styles.xml
+++ b/estatjapan/android/app/src/main/res/values/styles.xml
@@ -15,4 +15,7 @@
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:colorBackground">#D4EBF2</item>
+    </style>
 </resources>
