--- a/estatjapan/android/app/src/main/res/layout/activity_splash.xml
+++ b/estatjapan/android/app/src/main/res/layout/activity_splash.xml
@@ -34,7 +34,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:textAppearance="?android:attr/textAppearanceMedium"
-      android:textColor="@android:color/black"
+      android:textColor="@android:color/darker_gray"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       tools:ignore="MissingConstraints" />
