--- a/estatjapan/android/app/src/main/res/values/styles.xml
+++ b/estatjapan/android/app/src/main/res/values/styles.xml
@@ -16,6 +16,6 @@
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:colorBackground">#D4EBF2</item>
+        <item name="android:colorBackground">#000000</item>
     </style>
 </resources>
