--- a/estatjapan/android/app/src/main/res/layout/activity_splash.xml
+++ b/estatjapan/android/app/src/main/res/layout/activity_splash.xml
@@ -38,7 +38,16 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       tools:ignore="MissingConstraints" />
-<!--      app:layout_constraintTop_toBottomOf="@+id/splash_activity_title"/>-->
+
+  <ImageView
+      android:id="@+id/imageView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:scaleType="centerCrop"
+      app:srcCompat="@drawable/launchimage"
+      tools:layout_editor_absoluteX="0dp"
+      tools:layout_editor_absoluteY="-16dp" />
+  <!--      app:layout_constraintTop_toBottomOf="@+id/splash_activity_title"/>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
